@@ -12,6 +12,9 @@ Release 0.9.0 - unreleased
 
   IMPROVEMENT
 
+    TAJO-807: Implement Round(numeric, int) function.
+    (Seungun Choe via hyunsik)
+
     TAJO-797: Implicit type conversion support. (hyunsik)
 
     TAJO-804: Bump up Parquet version to 1.4.2. (hyunsik)
